--- a/myProject/myApp/templates/myApp/report.html
+++ b/myProject/myApp/templates/myApp/report.html
@@ -27,7 +27,7 @@
             </select>
 
             <br><label for="Anonymity Status">Anonymity Status</label>
-            <input type="checkbox" id="Anonymity Status" name="Anonymity Status" required>
+            <input type="checkbox" id="Anonymity Status" name="Anonymity Status">
             <input type="submit" name="submit" class="send-btn" value="Send">
         </form>
     </div>
